# hermes-dm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: api.rst  authors.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
scripts/: debug_sim.py
src/hermes_dm/: __init__.py  cli.py  daemoncli.py  monitor.py
src/hermes_dm/client/: connection.py  telemetry.py
src/hermes_dm/daemon/: db.py  server.py
src/hermes_dm/instruments/: __init__.py  base.py  discovery.py  keithley2410.py
tests/: conftest.py
tests/simulators/: full_lab_rack.yaml  keithley2410_only.yaml
tests/simulators/devices/: Generic_PSU.yaml  Keithley_2410.yaml
tests/simulators/racks/: full_rack.yaml  keithley2410_only_rack.yaml
tests/test_client/: test_connection.py
tests/test_daemon/: test_db.py  test_server.py
tests/test_instruments/: test_discovery.py  test_keithley2410.py
